nexus align sc for all

--- a/ot/nexus/charts/nexus-repository-manager/templates/deployment.yaml
+++ b/ot/nexus/charts/nexus-repository-manager/templates/deployment.yaml
@@ -37,6 +37,8 @@ spec:
         imagePullPolicy: IfNotPresent
         name: fmp-volume-permission
         securityContext:
+          fsGroup: 1000700000
+          runAsGroup: 1000700000
           runAsUser: 1000700000
         volumeMounts:
         - mountPath: /nexus-data
@@ -97,7 +99,7 @@ spec:
       securityContext:
         
         fsGroup: 1000700000
-        runAsGroup: 200
+        runAsGroup: 1000700000
         runAsUser: 1000700000
       volumes:
         - name: nexus-data
