--- a/chart/clusters/okd-sandbox/custom/nexus-okd/values.yaml
+++ b/chart/clusters/okd-sandbox/custom/nexus-okd/values.yaml
@@ -64,7 +64,9 @@ oauth2-proxy:
       whitelist_domains = ["*"]
     existingSecret: oauth2-proxy
   securityContext:
-    runAsUser: 1000700001
+      fsGroup: 1000700001
+      runAsGroup: 1000700001
+      runAsUser: 1000700001
   ingress:
     enabled: true
     hosts:
