add parameter realm name

--- a/chart/clusters/okd-sandbox/custom/nexus-okd/values.yaml
+++ b/chart/clusters/okd-sandbox/custom/nexus-okd/values.yaml
@@ -2,7 +2,7 @@ nexus-repository-manager:
   nameOverride: "nexus"
   fullnameOverride: "nexus"
   serviceAccount:
-    name: nexus-repo
+    name: "nexus-repo"
   ingress:
     enabled: false
     hostRepo: nexus.apps.okd-sandbox.aws.main.edp.projects.epam.con
