--- a/ot/nexus/charts/oauth2-proxy/templates/deployment.yaml
+++ b/ot/nexus/charts/oauth2-proxy/templates/deployment.yaml
@@ -100,8 +100,9 @@ spec:
           capabilities:
             drop:
             - ALL
+          fsGroup: 1000700001
           readOnlyRootFilesystem: true
-          runAsGroup: 2000
+          runAsGroup: 1000700001
           runAsNonRoot: true
           runAsUser: 1000700001
           seccompProfile:
