add parameter realm name34

--- a/chart/clusters/okd-sandbox/custom/nexus-okd/values.yaml
+++ b/chart/clusters/okd-sandbox/custom/nexus-okd/values.yaml
@@ -1,6 +1,6 @@
 nexus-repository-manager:
   nameOverride: "nexus"
-  fullnameOverride: "nexus"
+  #fullnameOverride: "nexus"
   serviceAccount:
     name: "okd"
   ingress:
