add parameter realm name34

--- a/chart/clusters/okd-sandbox/custom/nexus-okd/values.yaml
+++ b/chart/clusters/okd-sandbox/custom/nexus-okd/values.yaml
@@ -2,6 +2,7 @@ nexus-repository-manager:
   nameOverride: "nexus"
   #fullnameOverride: "nexus"
   serviceAccount:
+    create: false
     name: "okd"
   ingress:
     enabled: false
