--- a/chart/clusters/okd-sandbox/custom/nexus-okd/values.yaml
+++ b/chart/clusters/okd-sandbox/custom/nexus-okd/values.yaml
@@ -2,8 +2,8 @@ nexus-repository-manager:
   nameOverride: "nexus"
   fullnameOverride: "nexus"
   serviceAccount:
-    create: false
-    name: "okd"
+    create: true
+    name: "nexus-repo"
   ingress:
     enabled: false
     hostRepo: nexus.apps.okd-sandbox.aws.main.edp.projects.epam.con
