--- a/chart/clusters/okd-sandbox/custom/nexus-okd/values.yaml
+++ b/chart/clusters/okd-sandbox/custom/nexus-okd/values.yaml
@@ -2,8 +2,11 @@ nexus-repository-manager:
   nameOverride: "nexus"
   fullnameOverride: "nexus"
   serviceAccount:
-    create: true
     name: "nexus-repo"
+
+  service:
+    name: "nexus-ci"
+
   route:
     enabled: true
     name: "nexus-ci"
