--- a/chart/clusters/okd-sandbox/custom/nexus-okd/templates/oauth2-proxy-secret.yaml
+++ b/chart/clusters/okd-sandbox/custom/nexus-okd/templates/oauth2-proxy-secret.yaml
@@ -7,19 +7,19 @@ spec:
     - remoteRef:
         conversionStrategy: Default
         decodingStrategy: None
-        key: /edp/system
+        key: /edp/addons/okd-sandbox/nexus
         property: oauth2-proxy.client-id
       secretKey: client-id
     - remoteRef:
         conversionStrategy: Default
         decodingStrategy: None
-        key: /edp/system
+        key: /edp/addons/okd-sandbox/nexus
         property: oauth2-proxy.client-secret
       secretKey: client-secret
     - remoteRef:
         conversionStrategy: Default
         decodingStrategy: None
-        key: /edp/system
+        key: /edp/addons/okd-sandbox/nexus
         property: oauth2-proxy.cookie-secret
       secretKey: cookie-secret
   refreshInterval: 1h
