--- a/chart/clusters/okd-sandbox/custom/nexus-okd/templates/oidc/keycloak-client-secret.yaml
+++ b/chart/clusters/okd-sandbox/custom/nexus-okd/templates/oidc/keycloak-client-secret.yaml
@@ -13,5 +13,5 @@ spec:
     remoteRef:
       conversionStrategy: Default
       decodingStrategy: None
-      key: /edp/system
+      key: /edp/addons/okd-sandbox/nexus
       property: keycloak-client-nexus-secret.clientSecret
