--- a/chart/clusters/okd-sandbox/custom/nexus-okd/values.yaml
+++ b/chart/clusters/okd-sandbox/custom/nexus-okd/values.yaml
@@ -6,7 +6,7 @@ nexus-repository-manager:
 
   service:
     name: "nexus"
-    portName: "http"
+    portName: "nexus-ui"
 
   route:
     enabled: true
