--- a/chart/clusters/okd-sandbox/custom/argocd/templates/oidc/keycloak-client-secret.yaml
+++ b/chart/clusters/okd-sandbox/custom/argocd/templates/oidc/keycloak-client-secret.yaml
@@ -1,7 +1,10 @@
+{{ if .Values.oidc.enabled }}
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: keycloak-client-nexus-secret
+  name: keycloak-client-argocd-secret
+  labels:
+    app.kubernetes.io/part-of: argocd
 spec:
   refreshInterval: 1h
   secretStoreRef:
@@ -13,5 +16,7 @@ spec:
     remoteRef:
       conversionStrategy: Default
       decodingStrategy: None
-      key: /edp/addons/okd-sandbox/nexus
-      property: keycloak-client-nexus-secret.clientSecret
+      key: /edp/addons/eks-sandbox/argocd
+      metadataPolicy: None
+      property: argocd.clientSecret
+{{ end }}
