--- a/chart/clusters/okd-sandbox/apps/templates/argocd.yaml
+++ b/chart/clusters/okd-sandbox/apps/templates/argocd.yaml
@@ -1,29 +1,31 @@
-{{- if and (index .Values "nexus-okd") (index .Values "nexus-okd" "enable") -}}
+{{- if and (index .Values "argo-cd") (index .Values "argo-cd" "enable") -}}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: {{ .Values.destinationServer}}-nexus
+  name: {{ .Values.destinationServer}}-argo-cd
   namespace: {{ .Values.argoNamespace | default "argocd" }}
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
-  project: {{ .Values.argoProject | default "default" }}
+  project: default
   source:
     repoURL: {{ .Values.repoUrl }}
-    path: chart/clusters/okd-sandbox/custom/nexus-okd
+    path: chart/clusters/okd-sandbox/custom/argocd
     targetRevision: {{ .Values.targetRevision }}
     helm:
+      releaseName: argo-cd
       values: |
-        nexus-okd:
-        {{- toYaml (index .Values "nexus-repository-manager") | nindent 10 }}
+        argo-cd:
+        {{- toYaml (index .Values "argo-cd") | nindent 10 }}
   destination:
     name: {{ .Values.destinationServer | default "in-cluster" }}
-    namespace: nexus
+    namespace: argocd
   syncPolicy:
     automated:
       prune: true
     syncOptions:
-      - CreateNamespace={{ (index .Values "nexus-okd" "createNamespace") }}
+      - ServerSideApply=true
+      - CreateNamespace={{ (index .Values "argo-cd" "createNamespace") }}
     retry:
       limit: 1
       backoff:
