--- a/chart/clusters/okd-sandbox/apps/templates/nexus.yaml
+++ b/chart/clusters/okd-sandbox/apps/templates/nexus.yaml
@@ -23,7 +23,7 @@ spec:
     automated:
       prune: true
     syncOptions:
-      - CreateNamespace={{ (index .Values "nexus-okd" "createNamespace") }}
+      - CreateNamespace={{ .Values.nexus.createNamespace }}
     retry:
       limit: 1
       backoff:
