--- a/chart/clusters/okd-sandbox/apps/templates/argocd.yaml
+++ b/chart/clusters/okd-sandbox/apps/templates/argocd.yaml
@@ -1,4 +1,4 @@
-{{- if and (index .Values "argo-cd") (index .Values "argo-cd" "enable") -}}
+{{- if index .Values "argo-cd" "enable" -}}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
