--- a/ot/argo-cd/charts/argo-cd/templates/argocd-applicationset/deployment.yaml
+++ b/ot/argo-cd/charts/argo-cd/templates/argocd-applicationset/deployment.yaml
@@ -6,13 +6,13 @@ metadata:
   name: argocd-applicationset-controller
   namespace: "default"
   labels:
-    helm.sh/chart: argo-cd-5.52.1
+    helm.sh/chart: argo-cd-5.55.0
     app.kubernetes.io/name: argocd-applicationset-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: applicationset-controller
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: argocd
-    app.kubernetes.io/version: "v2.9.3"
+    app.kubernetes.io/version: "v2.10.0"
 spec:
   replicas: 1
   revisionHistoryLimit: 3
@@ -23,21 +23,21 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/cmd-params: 9896bf194ccfd06549370f7efd21b622f96b0fcefbd31accddb2cd841f3430ba
+        checksum/cmd-params: 538d8d8b2dc22d5488b14dba660279ef14d87e17480d83451a39426e58f733d6
       labels:
-        helm.sh/chart: argo-cd-5.52.1
+        helm.sh/chart: argo-cd-5.55.0
         app.kubernetes.io/name: argocd-applicationset-controller
         app.kubernetes.io/instance: argocd
         app.kubernetes.io/component: applicationset-controller
         app.kubernetes.io/managed-by: Helm
         app.kubernetes.io/part-of: argocd
-        app.kubernetes.io/version: "v2.9.3"
+        app.kubernetes.io/version: "v2.10.0"
     spec:
       terminationGracePeriodSeconds: 30
       serviceAccountName: argocd-applicationset-controller
       containers:
         - name: applicationset-controller
-          image: quay.io/argoproj/argocd:v2.9.3
+          image: quay.io/argoproj/argocd:v2.10.0
           imagePullPolicy: IfNotPresent
           args:
             - /usr/local/bin/argocd-applicationset-controller
@@ -168,6 +168,12 @@ spec:
                 configMapKeyRef:
                   name: argocd-cmd-params-cm
                   key: applicationsetcontroller.allowed.scm.providers
+                  optional: true
+            - name: ARGOCD_APPLICATIONSET_CONTROLLER_ENABLE_SCM_PROVIDERS
+              valueFrom:
+                configMapKeyRef:
+                  name: argocd-cmd-params-cm
+                  key: applicationsetcontroller.enable.scm.providers
                   optional: true
           ports:
             - name: metrics
