--- a/ot/argo-cd/charts/argo-cd/templates/argocd-configs/argocd-cm.yaml
+++ b/ot/argo-cd/charts/argo-cd/templates/argocd-configs/argocd-cm.yaml
@@ -6,17 +6,20 @@ metadata:
   name: argocd-cm
   namespace: "default"
   labels:
-    helm.sh/chart: argo-cd-5.52.1
+    helm.sh/chart: argo-cd-5.55.0
     app.kubernetes.io/name: argocd-cm
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: argocd
-    app.kubernetes.io/version: "v2.9.3"
+    app.kubernetes.io/version: "v2.10.0"
 data:
   admin.enabled: "true"
-  application.instanceLabelKey: argocd.argoproj.io/instance
+  application.instanceLabelKey: argocd.argoproj.io/instance-edp
   exec.enabled: "false"
+  oidc.config: map[clientID:argocd-tenant clientSecret:$argocd-secret:clientSecret issuer:https://keycloak.apps.okd-sandbox.aws.main.edp.projects.epam.com/auth/realms/control-plane
+    name:Keycloak requestedScopes:[openid profile email groups]]
   server.rbac.log.enforce.enable: "false"
   timeout.hard.reconciliation: 0s
   timeout.reconciliation: 180s
+  url: https://argocd.apps.okd-sandbox.aws.main.edp.projects.epam.com
