--- a/ot/argo-cd/charts/argo-cd/templates/argocd-configs/argocd-rbac-cm.yaml
+++ b/ot/argo-cd/charts/argo-cd/templates/argocd-configs/argocd-rbac-cm.yaml
@@ -6,14 +6,17 @@ metadata:
   name: argocd-rbac-cm
   namespace: "default"
   labels:
-    helm.sh/chart: argo-cd-5.52.1
+    helm.sh/chart: argo-cd-5.55.0
     app.kubernetes.io/name: argocd-rbac-cm
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: argocd
-    app.kubernetes.io/version: "v2.9.3"
+    app.kubernetes.io/version: "v2.10.0"
 data:
-  policy.csv: ""
+  policy.csv: |
+    # default global admins
+    g, ArgoCDAdmins, role:admin
   policy.default: ""
+  policy.matchMode: glob
   scopes: '[groups]'
