--- a/ot/argo-cd/charts/argo-cd/templates/argocd-notifications/deployment.yaml
+++ b/ot/argo-cd/charts/argo-cd/templates/argocd-notifications/deployment.yaml
@@ -6,13 +6,13 @@ metadata:
   name: argocd-notifications-controller
   namespace: "default"
   labels:
-    helm.sh/chart: argo-cd-5.52.1
+    helm.sh/chart: argo-cd-5.55.0
     app.kubernetes.io/name: argocd-notifications-controller
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: notifications-controller
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: argocd
-    app.kubernetes.io/version: "v2.9.3"
+    app.kubernetes.io/version: "v2.10.0"
 spec:
   replicas: 1
   revisionHistoryLimit: 3
@@ -25,19 +25,19 @@ spec:
   template:
     metadata:
       labels:
-        helm.sh/chart: argo-cd-5.52.1
+        helm.sh/chart: argo-cd-5.55.0
         app.kubernetes.io/name: argocd-notifications-controller
         app.kubernetes.io/instance: argocd
         app.kubernetes.io/component: notifications-controller
         app.kubernetes.io/managed-by: Helm
         app.kubernetes.io/part-of: argocd
-        app.kubernetes.io/version: "v2.9.3"
+        app.kubernetes.io/version: "v2.10.0"
     spec:
       terminationGracePeriodSeconds: 30
       serviceAccountName: argocd-notifications-controller
       containers:
         - name: notifications-controller
-          image: quay.io/argoproj/argocd:v2.9.3
+          image: quay.io/argoproj/argocd:v2.10.0
           imagePullPolicy: IfNotPresent
           args:
             - /usr/local/bin/argocd-notifications
@@ -63,6 +63,12 @@ spec:
               valueFrom:
                 configMapKeyRef:
                   key: application.namespaces
+                  name: argocd-cmd-params-cm
+                  optional: true
+            - name: ARGOCD_NOTIFICATION_CONTROLLER_SELF_SERVICE_NOTIFICATION_ENABLED
+              valueFrom:
+                configMapKeyRef:
+                  key: notificationscontroller.selfservice.enabled
                   name: argocd-cmd-params-cm
                   optional: true
           ports:
