--- a/ot/argo-cd/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
+++ b/ot/argo-cd/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
@@ -6,15 +6,15 @@ metadata:
   name: argocd-repo-server
   namespace: "default"
   labels:
-    helm.sh/chart: argo-cd-5.52.1
+    helm.sh/chart: argo-cd-5.55.0
     app.kubernetes.io/name: argocd-repo-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: repo-server
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: argocd
-    app.kubernetes.io/version: "v2.9.3"
+    app.kubernetes.io/version: "v2.10.0"
 spec:
-  replicas: 1
+  replicas: 2
   revisionHistoryLimit: 3
   selector:
     matchLabels:
@@ -23,22 +23,22 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/cmd-params: 9896bf194ccfd06549370f7efd21b622f96b0fcefbd31accddb2cd841f3430ba
-        checksum/cm: 33a984414ccd334b84492a13b85341d9a28cff6522b93106fd269604ec75d251
+        checksum/cmd-params: 538d8d8b2dc22d5488b14dba660279ef14d87e17480d83451a39426e58f733d6
+        checksum/cm: a14991039d6abfb0fac62ff30bc14156cc53f07d57be47d62c2c681074bc3655
       labels:
-        helm.sh/chart: argo-cd-5.52.1
+        helm.sh/chart: argo-cd-5.55.0
         app.kubernetes.io/name: argocd-repo-server
         app.kubernetes.io/instance: argocd
         app.kubernetes.io/component: repo-server
         app.kubernetes.io/managed-by: Helm
         app.kubernetes.io/part-of: argocd
-        app.kubernetes.io/version: "v2.9.3"
+        app.kubernetes.io/version: "v2.10.0"
     spec:
       terminationGracePeriodSeconds: 30
       serviceAccountName: argocd-repo-server
       containers:
       - name: repo-server
-        image: quay.io/argoproj/argocd:v2.9.3
+        image: quay.io/argoproj/argocd:v2.10.0
         imagePullPolicy: IfNotPresent
         args:
         - /usr/local/bin/argocd-repo-server
@@ -132,13 +132,13 @@ spec:
           - name: REDIS_USERNAME
             valueFrom:
               secretKeyRef:
-                name: argocd-redis
+                name: argocd-redis-ha-haproxy
                 key: redis-username
                 optional: true
           - name: REDIS_PASSWORD
             valueFrom:
               secretKeyRef:
-                name: argocd-redis
+                name: argocd-redis-ha-haproxy
                 key: redis-password
                 optional: true
           - name: ARGOCD_DEFAULT_CACHE_EXPIRATION
@@ -152,6 +152,18 @@ spec:
               configMapKeyRef:
                 name: argocd-cmd-params-cm
                 key: otlp.address
+                optional: true
+          - name: ARGOCD_REPO_SERVER_OTLP_INSECURE
+            valueFrom:
+              configMapKeyRef:
+                name: argocd-cmd-params-cm
+                key: otlp.insecure
+                optional: true
+          - name: ARGOCD_REPO_SERVER_OTLP_HEADERS
+            valueFrom:
+              configMapKeyRef:
+                name: argocd-cmd-params-cm
+                key: otlp.headers
                 optional: true
           - name: ARGOCD_REPO_SERVER_MAX_COMBINED_DIRECTORY_MANIFESTS_SIZE
             valueFrom:
@@ -199,6 +211,18 @@ spec:
             valueFrom:
               configMapKeyRef:
                 key: reposerver.enable.git.submodule
+                name: argocd-cmd-params-cm
+                optional: true
+          - name: ARGOCD_GIT_LS_REMOTE_PARALLELISM_LIMIT
+            valueFrom:
+              configMapKeyRef:
+                key: reposerver.git.lsremote.parallelism.limit
+                name: argocd-cmd-params-cm
+                optional: true
+          - name: ARGOCD_GIT_REQUEST_TIMEOUT
+            valueFrom:
+              configMapKeyRef:
+                key: reposerver.git.request.timeout
                 name: argocd-cmd-params-cm
                 optional: true
           - name: HELM_CACHE_HOME
@@ -266,7 +290,7 @@ spec:
         - -n
         - /usr/local/bin/argocd
         - /var/run/argocd/argocd-cmp-server
-        image: quay.io/argoproj/argocd:v2.9.3
+        image: quay.io/argoproj/argocd:v2.10.0
         imagePullPolicy: IfNotPresent
         name: copyutil
         securityContext:
