--- a/ot/argo-cd/charts/argo-cd/templates/argocd-server/clusterrole.yaml
+++ b/ot/argo-cd/charts/argo-cd/templates/argocd-server/clusterrole.yaml
@@ -5,13 +5,13 @@ kind: ClusterRole
 metadata:
   name: argocd-server
   labels:
-    helm.sh/chart: argo-cd-5.52.1
+    helm.sh/chart: argo-cd-5.55.0
     app.kubernetes.io/name: argocd-server
     app.kubernetes.io/instance: argocd
     app.kubernetes.io/component: server
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: argocd
-    app.kubernetes.io/version: "v2.9.3"
+    app.kubernetes.io/version: "v2.10.0"
 rules:
   - apiGroups:
       - '*'
@@ -27,6 +27,7 @@ rules:
       - events
     verbs:
       - list
+      - create
   - apiGroups:
       - ""
     resources:
