--- a/chart/clusters/okd-sandbox/custom/argocd/values.yaml
+++ b/chart/clusters/okd-sandbox/custom/argocd/values.yaml
@@ -23,7 +23,7 @@ argo-cd:
           - profile
           - email
           - groups
-      url: https://argocd.apps.okd-sandbox.aws.main.edp.projects.epam.com
+      url: https://argocd-dev.apps.okd-sandbox.aws.main.edp.projects.epam.com
     env:
     - name: ARGOCD_API_SERVER_REPLICAS
       value: "2"
@@ -38,4 +38,4 @@ argo-cd:
     replicas: 2
     route:
       enabled: true
-      hostname: argocd.apps.okd-sandbox.aws.main.edp.projects.epam.com
+      hostname: argocd-dev.eks-sandbox.aws.main.edp.projects.epam.com
