--- a/chart/clusters/okd-sandbox/custom/argocd/values.yaml
+++ b/chart/clusters/okd-sandbox/custom/argocd/values.yaml
@@ -38,4 +38,6 @@ argo-cd:
     replicas: 2
     route:
       enabled: true
-      hostname: argocd-dev.okd-sandbox.aws.main.edp.projects.epam.com
+      hostname: argocd-dev.apps.okd-sandbox.aws.main.edp.projects.epam.com
+      termination_policy: none
+      termination_type: edge
