--- a/chart/clusters/okd-sandbox/custom/argocd/values.yaml
+++ b/chart/clusters/okd-sandbox/custom/argocd/values.yaml
@@ -39,3 +39,5 @@ argo-cd:
     route:
       enabled: true
       hostname: argocd-dev.apps.okd-sandbox.aws.main.edp.projects.epam.com
+      termination: edge
+      insecureEdgeTerminationPolicy: Redirect
