--- a/chart/clusters/okd-sandbox/custom/argocd/values.yaml
+++ b/chart/clusters/okd-sandbox/custom/argocd/values.yaml
@@ -13,8 +13,8 @@ argo-cd:
     enabled: true
     containerSecurityContext:
       readOnlyRootFilesystem: true
-      runAsUser: 99
-      runAsGroup: 99
+      runAsUser: 1000710001
+      runAsGroup: 1000710001
       runAsNonRoot: true
   repoServer:
     replicas: 2
