--- a/chart/clusters/okd-sandbox/custom/argocd/templates/scc/argo.yaml
+++ b/chart/clusters/okd-sandbox/custom/argocd/templates/scc/argo.yaml
@@ -37,6 +37,8 @@ supplementalGroups:
 users:
   - system:serviceaccount:argocd:argo-redis-ha
   - system:serviceaccount:argocd:argo-redis-ha-haproxy
+  - system:serviceaccount:argocd:argo-cd-redis-ha
+  - system:serviceaccount:argocd:argo-cd-redis-ha-haproxy
   - system:serviceaccount:argocd:argocd-notifications-controller
   - system:serviceaccount:argocd:argo-argocd-repo-server
   - system:serviceaccount:argocd:argocd-server
