--- a/chart/clusters/okd-sandbox/apps/templates/nexus.yaml
+++ b/chart/clusters/okd-sandbox/apps/templates/nexus.yaml
@@ -1,4 +1,4 @@
-{{- if index .Values "nexus" "enable" -}}
+{{- if .Values "nexus" "enable" -}}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
