--- a/chart/clusters/okd-sandbox/custom/argocd/values.yaml
+++ b/chart/clusters/okd-sandbox/custom/argocd/values.yaml
@@ -37,7 +37,7 @@ argo-cd:
       scopes: '[groups]'
     replicas: 2
     route:
-      enabled: true
+      enabled: false
       hostname: argocd-dev.apps.okd-sandbox.aws.main.edp.projects.epam.com
       termination: edge
       insecureEdgeTerminationPolicy: Redirect
