--- a/chart/clusters/okd-sandbox/custom/argocd/values.yaml
+++ b/chart/clusters/okd-sandbox/custom/argocd/values.yaml
@@ -41,3 +41,6 @@ argo-cd:
       hostname: argocd-dev.apps.okd-sandbox.aws.main.edp.projects.epam.com
       termination: edge
       insecureEdgeTerminationPolicy: Redirect
+
+oidc:
+  enabled: true
