--- a/chart/clusters/okd-sandbox/custom/argocd/values.yaml
+++ b/chart/clusters/okd-sandbox/custom/argocd/values.yaml
@@ -36,6 +36,11 @@ argo-cd:
       policy.default: ""
       scopes: '[groups]'
     replicas: 2
+    route:
+      enabled: true
+      hostname: argocd-dev.apps.okd-sandbox.aws.main.edp.projects.epam.com
+      termination: edge
+      insecureEdgeTerminationPolicy: Redirect
 
 oidc:
   enabled: true
