--- a/chart/clusters/sandbox/custom/nexus-operator/charts/templates/nexus/repository/dotnet/edp-dotnet-proxy.yaml
+++ b/chart/clusters/sandbox/custom/nexus-operator/charts/templates/nexus/repository/dotnet/edp-dotnet-proxy.yaml
@@ -16,7 +16,7 @@ spec:
       routingRule: "routing-rule"
       cleanup:
         policyNames:
-          - "cleanup-policy"
+          - "dotnet-nexus-cleanup-policy"
       httpClient:
         autoBlock: true
         blocked: false
