--- a/chart/clusters/sandbox/custom/nexus-operator/charts/templates/nexus/repository/maven/edp-maven-releases.yaml
+++ b/chart/clusters/sandbox/custom/nexus-operator/charts/templates/nexus/repository/maven/edp-maven-releases.yaml
@@ -8,8 +8,11 @@ spec:
     name: nexus
   maven:
     hosted:
-      versionPolicy: release
       name: edp-maven-releases
+      maven:
+        versionPolicy: RELEASE
+        layoutPolicy: STRICT
+        contentDisposition: INLINE
       storage:
         blobStoreName: "edp-maven"
         strictContentTypeValidation: true
