--- a/chart/clusters/sandbox/custom/nexus-operator/charts/templates/nexus/repository/npm/edp-npm-proxy.yaml
+++ b/chart/clusters/sandbox/custom/nexus-operator/charts/templates/nexus/repository/npm/edp-npm-proxy.yaml
@@ -17,7 +17,7 @@ spec:
       routingRule: "routing-rule"
       cleanup:
         policyNames:
-          - "cleanup-policy"
+          - "npm-nexus-cleanup-policy"
       httpClient:
         autoBlock: true
         blocked: false
